[ISSUE-111] 記録ファネル計測を追加
